# LSCA

./: .gitignore  CLAUDE.md  DATA_WRANGLING.md  QUICKSTART.md  README.md  __init__.py  config.py  environment.yml  export.py  inference.py  pyproject.toml  requirements.txt  requirements_video_processing.txt  run_pipeline.py  stats.md  tasks.py  video_processing.py
adapters/: __init__.py  base.py  registry.py  velocity.py
encoding/: README.md  __init__.py  config.py  export.py  inference.py
encoding/adapters/: __init__.py  base.py  phoneme.py  registry.py  velocity.py
encoding/models/: __init__.py  loader.py
encoding/pipelines/: __init__.py  phoneme.py  prosody.py  transcript.py  video.py
litrature/: CAMELS.md  CAMELS.tex  abstract.tex  project_overview_document.md
models/: __init__.py  loader.py  model_loader.py
pipeline/: __init__.py  adapters.py  audio_pipeline.py  buffers.py  config.py  dispatch.py  inference.py  prosody_pipeline.py  scheduler.py  text_pipeline.py  video_pipeline.py
pipelines/: phoneme.py  prosody.py  transcript.py  video.py
scripts/: README.md  analyze_dataset.py  backfill_source_tag.py  consolidate_pregenerated.py  extract_merbench_features.py  generate_tokens.py  generate_wrangled_tokens.py  preprocess_data.py  run_ablations.py  train_adapters.py
streaming/: __init__.py  buffers.py  dispatch.py  scheduler.py
tests/: README.md  conftest.py  test_adapters.py  test_config.py  test_dataset.py  test_export.py  test_losses.py  test_pipelines.py  test_training.py
training/: __init__.py  dataset.py  evaluate.py  losses.py  train.py
(+35 files in other folders)
