[project]
name = "capstone"
version = "0.1.0"
description = "CAMELS: Multimodal Understanding Pipeline for Real-Time HCI"
authors = [
    {name = "Yekaterina Donegal",email = "yekaterinadonegal@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    # Core ML
    "torch (>=2.10.0,<3.0.0)",
    "torchvision (>=0.25.0,<0.26.0)",
    "torchaudio (>=2.10.0,<3.0.0)",
    # Vision — MARLIN facial video encoder
    "marlin-pytorch (>=0.2.0)",
    # Audio — wav2vec2 via HuggingFace Transformers
    "transformers (>=4.35.0,<5.0.0)",
    # Prosody features
    "librosa (>=0.10.0,<1.0.0)",
    # Live audio capture
    "sounddevice (>=0.4.6,<1.0.0)",
    # SONAR multilingual text encoder (Meta AI)
    # Install with: pip install sonar-space
    "sonar-space (>=0.2.0)",
    # Utilities
    "tqdm (>=4.67.3,<5.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "numpy (<2.0)",
    "pandas (<3.0)",
    # Video / face detection
    "opencv-python (==4.9.0.80)",
    "mediapipe (==0.10.21)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
